feat: add personal federation api
